[tool.poetry]
name = "ssh-trixter-server"
version = "0.1.0"
description = ""
authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = "^3.7"
asyncssh = "^2.4"
toml = "^0.10"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pytest = "^6"
Sphinx = "^3.2"
sphinx_rtd_theme = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

